# Pull-Request-AI-Agent

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  github-labels.yaml
.github/actions/clear_remote_branch/: action.yaml
.github/workflows/: action-e2e-test.yaml  ci.yaml  github-labels.yaml  rw_build_and_test.yaml  rw_poetry_run_test_with_multi_py_versions.yaml
create_pr_bot/: __main__.py  bot.py  git_hdlr.py  github_opt.py  log.py  model.py
create_pr_bot/ai_bot/: __init__.py
create_pr_bot/ai_bot/_base/: client.py
create_pr_bot/ai_bot/claude/: client.py  model.py
create_pr_bot/ai_bot/gemini/: client.py  model.py
create_pr_bot/ai_bot/gpt/: client.py  model.py
create_pr_bot/ai_bot/prompts/: model.py
create_pr_bot/project_management_tool/: __init__.py  clickup.py  model.py
create_pr_bot/project_management_tool/_base/: client.py  model.py
create_pr_bot/project_management_tool/clickup/: __init__.py  client.py  model.py
create_pr_bot/project_management_tool/jira/: client.py  model.py  test_client.py  test_model.py
prompts/: implement_bot_integrate_all_features.txt  implement_github_opt_model.txt  implement_prompts_models.txt
pull_request_ai_agent/: __main__.py  bot.py  git_hdlr.py  github_opt.py  model.py
pull_request_ai_agent/ai_bot/_base/: client.py
pull_request_ai_agent/ai_bot/claude/: client.py  model.py
pull_request_ai_agent/ai_bot/gemini/: client.py
pull_request_ai_agent/ai_bot/gpt/: client.py
pull_request_ai_agent/ai_bot/prompts/: model.py  summarize-as-clear-title.prompt  summarize-change-content.prompt
pull_request_ai_agent/project_management_tool/_base/: client.py
pull_request_ai_agent/project_management_tool/clickup/: __init__.py  client.py  model.py
pull_request_ai_agent/project_management_tool/jira/: client.py  model.py
scripts/ci/: clear_e2e_test_env.py
scripts/docker/: entrypoint.sh
test/integration_test/: ai_pr_generation.py  git_handler_workflows.py  pr_generation_workflow.py
test/unit_test/: bot.py  entry_point.py  git_hdlr.py  github_opt.py  log.py  model.py
test/unit_test/ai_bot/claude/: client.py
test/unit_test/ai_bot/gemini/: client.py
test/unit_test/ai_bot/gpt/: client.py
test/unit_test/ai_bot/prompts/: model.py
test/unit_test/project_management_tool/: clickup.py  model.py  service.py
test/unit_test/project_management_tool/clickup/: client.py  model.py
test/unit_test/project_management_tool/jira/: client.py  model.py  test_client.py  test_model.py
vibe_coding/prompts/: implement_customized_action.txt  implement_each_api_client.txt  implement_entry_point.txt  implement_git_handler_model.txt  implement_log_messages_for_troubleshooting.prompt  implement_using_configuration_file_to_configure_options.txt
