[project]
name = "create-pr-bot"
version = "0.0.0"
description = "🤖 A bot helps developers open pull request with details."
authors = [
    {name = "Chisanan232",email = "chi10211201@cycu.org.tw"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["automation", "bot", "pr", "pull request", "github", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "urllib3 (>=2.3.0,<3.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pygithub (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "create_pr_bot/" },
]

[project.urls]
Homepage = "https://github.com/Chisanan232/Create-PR-Bot"
Documentation = "https://chisanan232.github.io/Create-PR-Bot/stable/"
Repository = "https://github.com/Chisanan232/Create-PR-Bot"
Changelog = "https://chisanan232.github.io/Create-PR-Bot/latest/release_note/"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90184463981/90182761188"

[project.scripts]
#create-pr-bot = "create_pr_bot.runner:run"

#[tool.poetry.group.dev]
#optional = true

[tool.poetry.group.dev.dependencies]
# Dependency for test
pytest = "^8.1.1"
pytest-cov = "^6.1.1"
pytest-rerunfailures = "^15.0"
coverage = "^7.8"
# Dependency for CI
pre-commit = "^4.2.0"
pylint = "^3.1.0"
mypy = "^1.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.6.12"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = ">=0.24.1,<0.30.0"
mkdocstrings-python = "^1.16.10"
mike = "^2.1.3"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-committers-plugin-2 = {version = "^2.4.1", python = ">=3.8,<4"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
